<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pad">

    <EditText
        android:id="@+id/library_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/library_filter_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/pad_half">

        <Button
            android:id="@+id/tab_playlists"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_playlists" />

        <Button
            android:id="@+id/tab_albums"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_albums" />

        <Button
            android:id="@+id/tab_liked"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tab_liked" />
    </LinearLayout>

    <TextView
        android:id="@+id/screen_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:visibility="gone" />

    <Button
        android:id="@+id/screen_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_retry"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/screen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/library_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
