<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/pad">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gate_title"
        android:textSize="28sp"
        android:textColor="?attr/colorPrimary" />

    <TextView
        android:id="@+id/gate_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:text="@string/gate_sign_in"
        android:textColor="?attr/colorOnSurfaceVariant" />

    <ProgressBar
        android:id="@+id/gate_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:visibility="gone" />

    <Button
        android:id="@+id/gate_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:text="@string/gate_retry" />
</LinearLayout>
