<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/pad">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/detail_art"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="Artwork" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EchoHeadline" />

            <TextView
                android:id="@+id/detail_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EchoBodySubtitle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_half"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/detail_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <Button
            android:id="@+id/detail_sort"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pad_half"
            android:text="@string/sort_custom" />
    </LinearLayout>

    <TextView
        android:id="@+id/screen_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        style="@style/EchoBodySubtitle"
        android:visibility="gone" />

    <Button
        android:id="@+id/screen_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_retry"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/screen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detail_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
